// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`View renders additional className 1`] = `
<div
  className="view additional"
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
    }
  }
>
  any
</div>
`;

exports[`View renders children 1`] = `
<div
  className="view"
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
    }
  }
>
  <div>
    Child 1
  </div>
  <div>
    Child 1
  </div>
</div>
`;

exports[`View renders horizontaly when set 1`] = `
<div
  className="view"
  style={
    Object {
      "display": "flex",
      "flexDirection": "row",
    }
  }
>
  <div>
    1
  </div>
  <div>
    2
  </div>
</div>
`;
